<resources>
    <string name="app_name">Expense Control</string>
    <string name="prompt_user">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="controle">Controle</string>
    <string name="barganha">Barganha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lemelo_company">Lemelo Company</string>
    <string name="falecom_lemelo_com">falecom@lemelo.com</string>
    <string name="prompt_data">Data</string>
    <string name="action_salvar">Salvar</string>
    <string name="prompt_descricao">Descrição</string>
    <string name="prompt_entrada">Entrada de dinheiro</string>
    <string name="prompt_saida">Saída de dinheiro</string>
</resources>
